# analise-eleicoes-2024

./: .gitignore  README.md  pyproject.toml
code/: 00.py  01.ipynb  01.py  data_sources.json
